Fix albums center position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ a {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 1.5em;
   margin: 0 auto;
 }
@@ -139,6 +139,9 @@ a {
   }
   .search-container button {
     padding: 0.7em 2em;
+  }
+  .albums {
+    align-items: flex-start;
   }
   .album {
     min-height: 30em;
